syntax = "proto3";

package calculator;

option go_package = "calculator/calculatorpb";



message SumRequest {
	int32 first_number = 1;
	int32 second_number = 2;
}

message SumResponse {
	int32 result = 1;
}

message PrimeRequest {
	int32 num = 1;
}

message PrimeResponse { 
	int32 result = 1;
}

message AvgRequest {
	int32 num = 1;
}

message AvgResponse {
	float result = 1;
}

message MaxNumRequest {
	int32 num = 1;
}

message MaxNumResponse {
	int32 result = 1;
}



service CalculatorService{

	//Unary
	rpc Sum(SumRequest) returns (SumResponse) {};

	//Server Streaming 
	rpc Prime(PrimeRequest) returns (stream PrimeResponse) {};

	//Client Streaming
	rpc Average(stream AvgRequest) returns (AvgResponse) {};

	//Bi-Directional Streaming
	rpc MaxNum(stream MaxNumRequest) returns (stream MaxNumResponse) {};

}